--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</ul>
 		</p>
 		<h2>howto: Lead digital sources</h2>
-		<h3>First, you need soldiers</h3>
+		<h3>For that, you will need soldiers</h3>
 		<p>
 			<ul>
 				<li>
@@ -69,10 +69,10 @@
 	</div>
 	<div class="banner-fourth">
 		<div class="container">
-		<h3>Then, you organise your conquest</h3>
+		<h3>And you will need to organise your conquest</h3>
 		<p>
 			By planning all of your actions, your conquest will be better handled. 
-			Theme your conquest, give a name, a budget, and a timeline and you can start.
+			Theme your conquest, give a name, a budget, a timeline and you can start.
 		</p>
 		<div class="cards">
 		<div class="card">
