--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
 		<h2>The aim of your conquest</h2>
 		<p>
-			Within a Marketing department, the digital marketing conquest has a specific aim which is to get leads from digital sources and transform them as new business for the company. 
+			Within a Marketing department, the Digital Marketing Conquest (DMC) sub-department has a specific aim which is to get leads from digital sources and transform them as new business for the company. 
 			You will see later what are those sources, how we can manage them, and of course how we transform those web leads. 
 		</p>
 		</div>
@@ -49,7 +49,7 @@
 		<p>
 			<ul>
 				<li>
-					Marketing automation software
+					a Marketing Automation software
 				</li>
 				<li>
 					your CRM
@@ -61,7 +61,7 @@
 					the best webmaster you know 😎
 				</li>
 				<li>
-					lots of your brain 🤓
+					and a little bit of your brain 🤓
 				</li>
 			</ul>
 		</p>
@@ -73,23 +73,24 @@
 		<p>
 			By planning all of your actions, your conquest will be better handled. 
 			Theme your conquest, give a name, a budget, a timeline and you can start.
+			<br>Below, the four stages of a DMC:s
 		</p>
 		<div class="cards">
 		<div class="card">
 			<img src="images/giphy_army.gif" alt="army soldiers" width="170" height="110">
-			<h3>Prepare your assets</h3>
+			<h3>1. Prepare your assets</h3>
 		</div>
 		<div class="card">
 			<img src="images/giphy_plan.gif" alt="map war" width="170" height="110">
-			<h3>Plan your conquest</h3>
+			<h3>2. Plan your conquest</h3>
 		</div>
 		<div class="card">
 			<img src="images/giphy_act.gif" alt="act war" width="170" height="110">
-			<h3>Act your plan</h3>
+			<h3>3. Act your plan</h3>
 		</div>
 		<div class="card">
 			<img src="images/giphy_report.gif" alt="reporting" width="170" height="110">
-			<h3>Report your win</h3>
+			<h3>4. Report your win</h3>
 		</div>
 		</div>
 	</div>
