--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<p>
 			By planning all of your actions, your conquest will be better handled. 
 			Theme your conquest, give a name, a budget, a timeline and you can start.
-			<br>Below, the four stages of a DMC:
+			<br><br>Below, the four stages of a DMC:
 		</p>
 		<div class="cards">
 		<div class="card">
