--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<h2>The aim of your conquest</h2>
 		<p>
 			Within a Marketing department, the Digital Marketing Conquest (DMC) sub-department has a specific aim which is to get leads from digital sources and transform them as new business for the company. 
-			You will see later what are those sources, how we can manage them, and of course how we transform those web leads. 
+			You will see later what are those sources (#1), how we can manage them (#2), how you will need to prepare your conquest (#3), and of course how we transform those web leads. But that is another story! 
 		</p>
 		</div>
 	</div>
 	<div class="banner-third">
 		<div class="container">
-		<h2>Digital ammunitions</h2>
+		<h2>Digital ammunitions #1</h2>
 		<p>
 			<ul>
 				<li>
@@ -45,7 +45,7 @@
 			</ul>
 		</p>
 		<h2>howto: Lead digital sources</h2>
-		<h3>For that, you will need soldiers</h3>
+		<h3>For that, you will need soldiers...#2</h3>
 		<p>
 			<ul>
 				<li>
@@ -65,11 +65,12 @@
 				</li>
 			</ul>
 		</p>
+		<br>
 		</div>
 	</div>
 	<div class="banner-fourth">
 		<div class="container">
-		<h3>And you will need to organise your conquest</h3>
+		<h3>...and you will need to organise your conquest #3</h3>
 		<p>
 			By planning all of your actions, your conquest will be better handled. 
 			Theme your conquest, give a name, a budget, a timeline and you can start.
@@ -78,21 +79,22 @@
 		<div class="cards">
 		<div class="card">
 			<img src="images/giphy_army.gif" alt="army soldiers" width="170" height="110">
-			<h3>1. Prepare your assets</h3>
+			<h3><b>1</b><br>Prepare your assets</h3>
 		</div>
 		<div class="card">
 			<img src="images/giphy_plan.gif" alt="map war" width="170" height="110">
-			<h3>2. Plan your conquest</h3>
+			<h3><b>2</b><br>Plan your conquest</h3>
 		</div>
 		<div class="card">
 			<img src="images/giphy_act.gif" alt="act war" width="170" height="110">
-			<h3>3. Act your plan</h3>
+			<h3><b>3</b><br>Act your<br>plan</h3>
 		</div>
 		<div class="card">
 			<img src="images/giphy_report.gif" alt="reporting" width="170" height="110">
-			<h3>4. Report your win</h3>
+			<h3><b>4</b><br>Report your win</h3>
 		</div>
 		</div>
+		<br>
 	</div>
 	</div>
 	<div id="joinLeadConquest">
