--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</li>
 			</ul>
 		</p>
-		<h2>howto: Lead digital sources</h2>
+		<h2>howto: Manage digital sources</h2>
 		<h3>For that, you will need soldiers...#2</h3>
 		<p>
 			<ul>
