--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					a Marketing Automation software
 				</li>
 				<li>
-					your CRM
+					your Customer Relationship Management (CRM)
 				</li>
 				<li>
 					some digital agencies
