--- a/images/index.html
+++ b/images/index.html
@@ -10,8 +10,8 @@
 
   gtag('config', 'UA-130621157-1');
 </script>
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/PATH_TO_STATIC_FAVICON/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/PATH_TO_ANIMATED_FAVICON/favicon.ico" type="image/x-icon">
 		<title>LeadConquest</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
