--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</div>
 	<div class="banner-third">
 		<div class="container">
-		<h2>Digital ammunitions #1 </h2>
+		<h2>#1 Several digital ammunitions are available...</h2>
 		<p>
 			<ul>
 				<li>
@@ -55,8 +55,7 @@
 				</li>
 			</ul>
 		</p>
-		<h2>howto: Manage digital sources</h2>
-		<h3>For that, you will need soldiers...#2</h3>
+		<h2>#2 that many soldiers can manage and lead...</h2>
 		<p>
 			<ul>
 				<li>
@@ -81,7 +80,7 @@
 	</div>
 	<div class="banner-fourth">
 		<div class="container">
-		<h3>...and you will need to organise your conquest #3</h3>
+		<h2>[...[ #3 as soon as you organise your conquest. </h2>
 		<p>
 			By planning all of your actions, your conquest will be better handled. 
 			Theme your conquest, give a name, a budget, a timeline and you can start.
