--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	</div>
 	<div class="banner-fourth">
 		<div class="container">
-		<h2>[...[ #3 as soon as you organise your conquest. </h2>
+		<h2>#3 as soon as you organise your conquest. </h2>
 		<p>
 			By planning all of your actions, your conquest will be better handled. 
 			Theme your conquest, give a name, a budget, a timeline and you can start.
