--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   gtag('config', 'UA-130621157-1');
 </script>
+
+</script>
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<title>LeadConquest</title>
