--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="container">
 		<h2>The aim of your conquest</h2>
 		<p>
-			Within a Marketing department, the Digital Marketing Conquest (DMC) sub-department has a specific aim which is to gain leads from digital sources and transform them as new business for the company.
+			Within a Marketing department, the Digital Marketing Conquest (DMC) sub-department has a specific aim which is to gain leads from digital sources and transform them as new businesses for the company.
 			You will see later what are those sources (#1), how we can manage them (#2), how you will need to prepare your conquest (#3), and of course how we transform those web leads. But that is another story!
 		</p>
 		</div>
