--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<h2>#3 as soon as you organize your conquest. </h2>
 		<p>
 			By planning all of your actions, your conquest will be better handled.
-			Theme your conquest, give a name, a budget, a timeline and you can start.
+			Theme your conquest, give it a name, a budget, a timeline and you can start.
 			<br><br>Below, the four stages of a DMC:
 		</p>
 		<div class="cards">
